[2208] fixed "Meet our contributors" images breaks on "About" page

--- a/src/components/contributor-swiper-card/contributor-swiper-card.module.scss
+++ b/src/components/contributor-swiper-card/contributor-swiper-card.module.scss
@@ -24,7 +24,7 @@
 
     img {
       width: 100%;
-      height: fit-content;
+      height: auto;
     }
   }
 
